feat: add changes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for OpenAPI-Generator
 
-0.01    Date/time
+0.02    10 April 2021
+        Documentation imrovements
+
+0.01    10 April 2021
         First version, released on an unsuspecting world.
 
