--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for OpenAPI-Generator
 
+0.03    11 April 2021
+        Added generator 'From::Defenitions'. Documentation improvements
+
 0.02    10 April 2021
         Documentation imrovements
 
