--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for OpenAPI-Generator
 
+0.06    14 April 2021
+        Allow to use 'From::Definitions' without specifying src
+
 0.05    12 April 2021
         Fixed perl version. Added documentation
 
